pathmod_derive/tests/ui/enum_named_single.stderr
error: #[derive(EnumAccess)] currently supports only tuple variants with exactly one field; named-field single variants are not yet supported
 --> tests/ui/enum_named_single.rs:3:10
  |
3 | #[derive(EnumAccess)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `EnumAccess` (in Nightly builds, run with -Z macro-backtrace for more info)
