pathmod_derive/tests/ui/enum_named_single.rs
use pathmod::prelude::*;

#[derive(EnumAccess)]
enum V { Named { v: i32 } }

fn main() {}
